# deertick

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.txt  agent.py  bot.py  config.ini  crawler.py  deertick.py  hypertext_heaven.py  license  line_correct.py  model_data.csv  model_data.py  models.csv  package-lock.json  package.json  pyproject.toml  requirements.txt  samples.csv  scraper.py  soap_yote.py  terminal_chat.py  tsconfig.json
bot/: client.py  data_encoding.py  director.py  error.py  main.py  models.py
bot/commands/: __init__.py  add_to_prompt.py  attach_agent.py  continue.py  create_agent.py  deertick_help.py  delete_agent.py  get_agent_info.py  get_param.py  get_prompt.py  list_agents.py  set_param.py  set_prompt.py  talk.py
bot/db/: agent.py  error_log.py  message.py  pool.py  tables.py
bot/events/: __init__.py  on_message.py  on_ready.py
docs/: agent_doc.md  bot_doc.md  crawler.md  data_gen_doc.md  data_tool_doc.md  db_doc.md  deertick_doc.md  hypertext_heaven_doc.md  model_data_doc.md  pdf_to_txt_formatting_doc.md  scraper_doc.md
src/: agent.py  agent.ts  index.ts  modelData.ts  podcast.py  songwriter.py  terminalChat.ts  tsconfig.json
src/py/: agent.py  bot.py  crawler.py  db.py  deertick.py  model_data.py  scraper.py  terminal_chat.py
src/ts/: agent.ts  index.ts  modelData.ts  terminalChat.ts  tsconfig.json
src/ts/types/: agent.d.ts  index.d.ts
src/types/: db.d.ts
