[project]
name = "deertick"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.4.0",
    "asyncpg==0.30.0",
    "asyncssh==2.17.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "configparser==7.1.0",
    "discord-py==2.4.0",
    "distro==1.9.0",
    "h11==0.14.0",
    "httpcore==1.0.5",
    "httpx==0.27.2",
    "idna==3.9",
    "jiter==0.5.0",
    "jsonpath-python==1.0.6",
    "mistralai==1.0.3",
    "mypy-extensions==1.0.0",
    "numpy==2.1.1",
    "openai==1.45.0",
    "packaging==24.1",
    "pandas==2.2.3",
    "pandas-stubs>=2.3.3.251201",
    "pydantic==2.8.2",
    "pydantic-core==2.20.1",
    "pytz==2024.2",
    "replicate==0.32.1",
    "requests==2.32.3",
    "six==1.16.0",
    "sniffio==1.3.1",
    "tqdm==4.66.5",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "tzdata==2024.1",
    "urllib3==2.2.3",
]
