[project]
name = "deertick"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    #ignoring 0.31.0, no clear benefits
    "asyncpg==0.30.0",
    #ignoring 2.21.1, no clear benefits
    "asyncssh==2.18.0",
    "certifi==2025.11.12",
    #ignoring 3.4.4, no clear benefits
    "charset-normalizer==3.4.0",
    "colorama==0.4.6",
    "configparser==7.2.0",
    #ignoring 2.6.4, no clear benefits
    "discord-py==2.6.0",
    "distro==1.9.0",
    #required by httpcore
    "h11==0.16.0",
    #required by httpx
    "httpcore==1.0.9",
    #required by:
    #mistralai
    #replicate
    "httpx==0.28.1",
    "idna==3.11",
    #ignoring 0.12.0, no clear benefits
    "jiter==0.10.0",
    #ignoring 1.1.4, no clear benefits
    "jsonpath-python==1.1.2",
    "mistralai==1.9.11",
    "mypy-extensions==1.1.0",
    #ignoring 3.15.2, no clear benefits
    "niquests==3.13.1",
    #ignoring 2.2.4, no clear benefits
    "numpy==2.2.0",
    "openai==2.9.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pandas-stubs>=2.3.3.251201",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pytz==2025.2",
    #ignoring 1.0.7, no clear benefits
    "replicate==1.0.3",
    #ignoring 1.17.0, no clear benefits
    "six==1.16.0",
    #required by openai
    "sniffio==1.3.1",
    #ignoring 4.67.1, no clear benefits
    "tqdm==4.66.5",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "tzdata==2025.2",
]
